[tool.poetry]
name = "statistical_learning_with_python"
version = "0.1.0"
description = ""
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
cvxopt = "^1.2.5"
japanize_matplotlib = "^1.1.2"
jupyter = {extras = ["notebook"], version = "^1.0.0"}
lightgbm = "^2.3.1"
matplotlib = "^3.2.1"
mlxtend = "^0.17.2"
numpy = "^1.18.5"
pandas = "^1.0.4"
python-igraph = "^0.8.2"
scikit-learn = "^0.23.1"
scipy = "^1.4.1"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]
jupyter_contrib_nbextensions = "^0.5.1"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
